trying to prevent zoom in on mobile and changed globe to logo

--- a/styles.css
+++ b/styles.css
@@ -80,7 +80,7 @@ button, input, textarea {
     font-weight: bold;
     text-transform: uppercase;
     width: 200px;
-    padding: 8px 16px;
+    padding: 12px 16px;
     font-size: 14px;
 }
 
